--- a/css/_base.css
+++ b/css/_base.css
@@ -404,6 +404,7 @@ textarea {
   /* 2 */
 }
 
+/*base file start*/
 * {
   box-sizing: border-box;
 }
@@ -417,3 +418,22 @@ body {
   background-color: #edeef1;
   font-family: Exo;
 }
+
+h1 {
+  color: black;
+  font-family: Exo;
+  font-size: 65px;
+  font-weight: 100;
+}
+
+button {
+  border: 0;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  margin: 0;
+}
+
+/*base file end*/
