--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 
+/*base file start*/
 * {
   box-sizing: border-box;
 }
@@ -13,3 +14,22 @@ body {
   background-color: #edeef1;
   font-family: Exo;
 }
+
+h1 {
+  color: black;
+  font-family: Exo;
+  font-size: 4.063em;
+  font-weight: 100;
+}
+
+button {
+  border: 0;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  margin: 0;
+  
+}
+/*base file end*/
